// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mantine sawmill should generate dark theme based on custom colors 1`] = `
{
  "breakpoints": {
    "lg": "74em",
    "md": "64em",
    "sm": "48em",
    "xl": "90em",
    "xs": "30em",
  },
  "colorScheme": "dark",
  "colors": {
    "danger": [
      "#ffdddd",
      "#ffbdbd",
      "#ff9797",
      "#ff6363",
      "#FF0000",
      "#eb0000",
      "#ce0000",
      "#ab0000",
      "#800000",
      "#390000",
    ],
    "default": [
      "#e6e6e6",
      "#d0d0d0",
      "#b7b7b7",
      "#9a9a9a",
      "#808080",
      "#767676",
      "#676767",
      "#565656",
      "#404040",
      "#1d1d1d",
    ],
    "info": [
      "#ddddff",
      "#bdbdff",
      "#9797ff",
      "#6363ff",
      "#0000FF",
      "#0000eb",
      "#0000ce",
      "#0000ab",
      "#000080",
      "#000039",
    ],
    "primary": [
      "#e6dde6",
      "#d0bdd0",
      "#b797b7",
      "#9a639a",
      "#800080",
      "#760076",
      "#670067",
      "#560056",
      "#400040",
      "#1d001d",
    ],
    "success": [
      "#dde6dd",
      "#bdd0bd",
      "#97b797",
      "#639a63",
      "#008000",
      "#007600",
      "#006700",
      "#005600",
      "#004000",
      "#001d00",
    ],
    "warning": [
      "#ffffdd",
      "#ffffbd",
      "#ffff97",
      "#ffff63",
      "#FFFF00",
      "#ebeb00",
      "#cece00",
      "#abab00",
      "#808000",
      "#393900",
    ],
  },
  "defaultRadius": 0,
  "fontFamily": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
  "fontFamilyMonospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
  "fontSizes": {
    "lg": "1.067rem",
    "md": "1.000rem",
    "sm": "0.878rem",
    "xl": "1.383rem",
    "xs": "0.823rem",
    "xxl": "2.479rem",
  },
  "headings": {
    "sizes": {
      "h1": {
        "fontSize": "1.5745299861316333rem",
      },
      "h2": {
        "fontSize": "1.2961572031209998rem",
      },
      "h3": {
        "fontSize": "1.2147677629999998rem",
      },
      "h4": {
        "fontSize": "1.1384889999999999rem",
      },
      "h5": {
        "fontSize": "1.067rem",
      },
      "h6": {
        "fontSize": "1rem",
      },
    },
  },
  "other": {
    "colors": {
      "brand": {
        "concrete": "#93a5c0",
        "logo": "#8e99ab",
        "primary": "#ff1e1b",
        "secondary": "#ffebeb",
        "tertiary": "#5c6370",
      },
      "global": {
        "background": "#89a4ff",
        "contentBackground": "#0b42ff",
        "link": "#8cb5ea",
        "linkHover": "#bfe7ff",
        "navigationBackground": "#0b42ff",
        "navigationBoxShadow": "rgba(20,20,20,0.5)",
        "textAlt": "#ffebeb",
        "textDefault": "#5c6370",
      },
      "gray": {
        "10": "#5c6370",
        "100": "#ffebeb",
        "20": "#6e727e",
        "30": "#80818b",
        "40": "#929099",
        "50": "#a49fa7",
        "60": "#b7afb4",
        "70": "#c9bec2",
        "80": "#dbcdd0",
        "90": "#eddcdd",
      },
    },
  },
  "primaryColor": "info",
  "primaryShade": {
    "dark": 4,
    "light": 4,
  },
  "spacing": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
}
`;

exports[`mantine sawmill should generate light theme based on custom colors 1`] = `
{
  "breakpoints": {
    "lg": "74em",
    "md": "64em",
    "sm": "48em",
    "xl": "90em",
    "xs": "30em",
  },
  "colorScheme": "light",
  "colors": {
    "danger": [
      "#ffd8d8",
      "#ffbdbd",
      "#ff9e9e",
      "#ff7878",
      "#FF0000",
      "#e10000",
      "#c80000",
      "#ab0000",
      "#880000",
      "#580000",
    ],
    "default": [
      "#e2e2e2",
      "#d0d0d0",
      "#bbbbbb",
      "#a5a5a5",
      "#808080",
      "#717171",
      "#646464",
      "#565656",
      "#444444",
      "#2c2c2c",
    ],
    "info": [
      "#d8d8ff",
      "#bdbdff",
      "#9e9eff",
      "#7878ff",
      "#0000FF",
      "#0000e1",
      "#0000c8",
      "#0000ab",
      "#000088",
      "#000058",
    ],
    "primary": [
      "#e2d8e2",
      "#d0bdd0",
      "#bb9ebb",
      "#a578a5",
      "#800080",
      "#710071",
      "#640064",
      "#560056",
      "#440044",
      "#2c002c",
    ],
    "success": [
      "#d8e2d8",
      "#bdd0bd",
      "#9ebb9e",
      "#78a578",
      "#008000",
      "#007100",
      "#006400",
      "#005600",
      "#004400",
      "#002c00",
    ],
    "warning": [
      "#ffffd8",
      "#ffffbd",
      "#ffff9e",
      "#ffff78",
      "#FFFF00",
      "#e1e100",
      "#c8c800",
      "#abab00",
      "#888800",
      "#585800",
    ],
  },
  "defaultRadius": 0,
  "fontFamily": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
  "fontFamilyMonospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
  "fontSizes": {
    "lg": "1.067rem",
    "md": "1.000rem",
    "sm": "0.878rem",
    "xl": "1.383rem",
    "xs": "0.823rem",
    "xxl": "2.479rem",
  },
  "headings": {
    "sizes": {
      "h1": {
        "fontSize": "1.5745299861316333rem",
      },
      "h2": {
        "fontSize": "1.2961572031209998rem",
      },
      "h3": {
        "fontSize": "1.2147677629999998rem",
      },
      "h4": {
        "fontSize": "1.1384889999999999rem",
      },
      "h5": {
        "fontSize": "1.067rem",
      },
      "h6": {
        "fontSize": "1rem",
      },
    },
  },
  "other": {
    "colors": {
      "brand": {
        "concrete": "#93a5c0",
        "logo": "#8e99ab",
        "primary": "#ff1e1b",
        "secondary": "#ffebeb",
        "tertiary": "#5c6370",
      },
      "global": {
        "background": "#89a4ff",
        "contentBackground": "#0b42ff",
        "link": "#8cb5ea",
        "linkHover": "#5b85b8",
        "navigationBackground": "#0b42ff",
        "navigationBoxShadow": "rgba(245,246,248,0.5)",
        "textAlt": "#ffebeb",
        "textDefault": "#5c6370",
      },
      "gray": {
        "10": "#5c6370",
        "100": "#ffebeb",
        "20": "#6e727e",
        "30": "#80818b",
        "40": "#929099",
        "50": "#a49fa7",
        "60": "#b7afb4",
        "70": "#c9bec2",
        "80": "#dbcdd0",
        "90": "#eddcdd",
      },
    },
  },
  "primaryColor": "info",
  "primaryShade": {
    "dark": 4,
    "light": 4,
  },
  "spacing": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
}
`;
